why choose us section

--- a/public/assets/backend/css/custom.css
+++ b/public/assets/backend/css/custom.css
@@ -19,6 +19,20 @@
 /* page section */
 .pages .page-section{
     position: relative;
+    height: 100%;
+}
+
+.pages .page-section .card-body{
+    overflow: hidden;
+    border-radius: 10px 10px 0 0;
+}
+
+.pages .page-section .card-body img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    transition: all 0.3s ease;
 }
 
 .pages .page-section a{
@@ -38,4 +52,8 @@
 
 .pages .page-section a i{
     color: #000;
+}
+
+.pages .page-section h4{
+    font-weight: 600;
 }
